# medaudit

./: .gitignore  DESIGN.md  LICENSE  README.md  pyproject.toml
medaudit/: __init__.py  audit.py  cli.py  manifest.py  metrics.py  splits.py
medaudit/audits/: __init__.py  leakage.py  probe.py
tests/: test_audit.py  test_hardening.py  test_leakage.py  test_metrics.py  test_probe.py  test_splits.py
tutorial/: from-pixels-to-patients.md  make_demo.py  make_figures.py
