[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "medaudit"
version = "0.1.0"
description = "A reliability audit toolkit for medical-image classifiers: shortcut, leakage, calibration and prevalence checks in one report."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
keywords = ["medical-imaging", "trustworthy-ml", "shortcut-learning", "calibration", "model-audit"]
dependencies = ["numpy>=1.21"]

[project.optional-dependencies]
# heavy deps only needed for the model-based audits (probe / leakage-embedding / external eval)
audit = ["torch>=2.0", "torchvision>=0.15", "pillow>=9", "matplotlib>=3.5"]
dev = ["pytest>=7"]

[project.scripts]
medaudit = "medaudit.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["medaudit*"]
