[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "medaudit"
dynamic = ["version"]
description = "A reliability audit toolkit for medical-image classifiers: acquisition-shortcut and leakage audits on frozen features, with patient-clustered confidence intervals."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
keywords = ["medical-imaging", "trustworthy-ml", "shortcut-learning", "calibration", "model-audit"]
dependencies = ["numpy>=1.21"]

[project.optional-dependencies]
# Not needed by any audit: the toolkit is numpy-only and consumes features you extract
# yourself. These are here only for the optional figure/demo helpers.
figures = ["matplotlib>=3.5"]
dev = ["pytest>=7"]

[project.scripts]
medaudit = "medaudit.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["medaudit*"]

[tool.setuptools.dynamic]
version = { attr = "medaudit.__version__" }
